barleta/apps/identity/traefik-routes-https.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: keycloak-https
  namespace: identity
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`keycloak.barleta.local`)
      kind: Rule
      services:
        - name: keycloak
          port: 80
  tls: {}
